--- a/Capstone-Project-mAadhar/mAadharApp/src/app/app.component.html
+++ b/Capstone-Project-mAadhar/mAadharApp/src/app/app.component.html
@@ -33,4 +33,8 @@
     <router-outlet></router-outlet>
 </div>
 
-
+<footer class = "footer">
+    <div class = "container">
+        <span>@Copyright 2022 ,developed By:Subalakshmi</span>
+    </div>
+</footer>
